2010-04-24  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (display_line): Use `reseat' instead of `reseat_1', and
	use `get_next_display_element' and `set_iterator_to_next' to
	advance to the next character, when looking for the character that
	begins the next row.

	* .gdbinit: Add a "set Fmake_symbol" line to force GDB to load the
	definition of "struct Lisp_Symbol".

2010-04-24  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (CRT_DIR): New variable, set by configure.
	* m/amdx86-64.h, m/ibms390x.h (START_FILES, LIB_STANDARD):
	Use $CRT_DIR rather than HAVE_LIB64_DIR.  (Bug#5655)

2010-04-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* Makefile.in: Remove C_SWITCH_X_MACHINE, unused.

	* s/cygwin.h (LIBS_DEBUG): Remove, unused.

	Remove redundant flags.
	* s/freebsd.h (C_SWITCH_SYSTEM):
	* s/hpux10-20.h (C_SWITCH_X_SYSTEM, LD_SWITCH_X_DEFAULT):
	* s/netbsd.h (C_SWITCH_SYSTEM):
	* s/openbsd.h (LD_SWITCH_X_DEFAULT): Remove, configure takes care
	of these.

	Simplify m/intel386.h.
	* m/intel386.h (CRT0_DUMMIES): Remove, inline value in the only
	user: ecrt0.c.
	(SOLARIS2): Remove LOAD_AVE_TYPE, LOAD_AVE_CVT, LIBS_MACHINE, unused.
	(USG5_4): Move LOAD_AVE_TYPE, LOAD_AVE_CVT, FSCALE definitions to
	the only user: s/unixware.h.
	* ecrt0.c: Remove #ifndef static.  Inline CRT0_DUMMIES definition
	from m/intel386.h.
	* s/unixware.h (LOAD_AVE_TYPE, LOAD_AVE_CVT, FSCALE): Definitions
	moved here from m/intel386.h.

	* m/mips.h: Remove #if 0 code.

2010-04-23  Eli Zaretskii  <eliz@gnu.org>

	Fix display of composed characters from L2R scripts in bidi buffers.
	* xdisp.c (set_iterator_to_next, next_element_from_composition):
	After advancing IT past the composition, resync the bidi iterator
	with IT's position.  (Bug#5977)

2010-04-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* Makefile.in (LD_SWITCH_MACHINE_TEMACS): Remove, unused.
	(TEMACS_LDFLAGS): Don't use LD_SWITCH_SYSTEM_TEMACS.

2010-04-23  Stefan Monnier  <monnier@iro.umontreal.ca>
